tests/reject/infer_lambda_param.ty
fn main():
    g := fn(x): x + 1
    print(str(g(1)))
